--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # assets:
-  #   - assets/images/
-  #   - assets/icons/
+  assets:
+    - assets/data/
