--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = submersion
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = io.github.ericgriffin.submersion
+PRODUCT_BUNDLE_IDENTIFIER = app.submersion
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2025 Eric Griffin. All rights reserved.
