--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,6 @@
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 
-# Uncomment and set this to your Java 17+ installation path after installing Java 17
-org.gradle.java.home=/Library/Java/JavaVirtualMachines/openjdk-17.jdk/Contents/Home
+# Java home is configured automatically by CI via JAVA_HOME environment variable.
+# For local development, set JAVA_HOME in your shell profile or uncomment below:
+# org.gradle.java.home=/Library/Java/JavaVirtualMachines/openjdk-17.jdk/Contents/Home
