--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -128,10 +128,10 @@ jobs:
         run: dart run build_runner build --delete-conflicting-outputs
 
       - name: Build iOS
-        run: flutter build ios --release --no-codesign
+        run: flutter build ios --release --no-codesign -v
 
       - name: Build macOS
-        run: flutter build macos --release --no-codesign
+        run: flutter build macos --release --no-codesign -v
 
       - name: Upload iOS artifact
         uses: actions/upload-artifact@v4
@@ -198,10 +198,10 @@ jobs:
         run: dart run build_runner build --delete-conflicting-outputs
 
       - name: Build Android APK
-        run: flutter build apk --release
+        run: flutter build apk --release -v
 
       - name: Build Linux
-        run: flutter build linux --release
+        run: flutter build linux --release -v
 
       - name: Upload Android artifact
         uses: actions/upload-artifact@v4
@@ -247,7 +247,7 @@ jobs:
         run: dart run build_runner build --delete-conflicting-outputs
 
       - name: Build Windows
-        run: flutter build windows --release
+        run: flutter build windows --release -v
 
       - name: Upload Windows artifact
         uses: actions/upload-artifact@v4
