--- a/macos/Runner/Configs/Release.xcconfig
+++ b/macos/Runner/Configs/Release.xcconfig
@@ -1,7 +1,8 @@
+#include "../../Pods/Target Support Files/Pods-Runner/Pods-Runner.release.xcconfig"
 #include "../../Flutter/Flutter-Release.xcconfig"
 #include "Warnings.xcconfig"
 
-# Disable code signing for CI builds.
+// Disable code signing for CI builds.
 CODE_SIGNING_REQUIRED = NO
 CODE_SIGNING_ALLOWED = NO
 CODE_SIGN_IDENTITY =
