--- a/macos/Runner/Configs/Debug.xcconfig
+++ b/macos/Runner/Configs/Debug.xcconfig
@@ -1,3 +1,6 @@
 #include "../../Pods/Target Support Files/Pods-Runner/Pods-Runner.debug.xcconfig"
 #include "../../Flutter/Flutter-Debug.xcconfig"
 #include "Warnings.xcconfig"
+
+// Disable merged UI/platform thread to use the traditional threading model.
+FLUTTER_MERGED_PLATFORM_THREAD = 0
