--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,27 +14,27 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   # State Management
-  flutter_riverpod: ^3.1.0
-  riverpod_annotation: ^4.0.0
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
 
   # Database
-  drift: ^2.20.0
-  sqlite3: ^2.4.6
-  sqlite3_flutter_libs: ^0.5.24
+  drift: ^2.28.2
+  sqlite3: ^2.9.4
+  sqlite3_flutter_libs: ^0.5.41
   path_provider: ^2.1.4
   path: ^1.9.0
 
   # Serialization
-  freezed_annotation: ^3.1.0
+  freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
 
   # Navigation
-  go_router: ^17.0.1
+  go_router: ^14.8.1
 
   # UI Components
-  fl_chart: ^1.1.1
-  flutter_map: ^8.2.2
-  flutter_map_marker_cluster: ^8.2.2
+  fl_chart: ^0.68.0
+  flutter_map: ^7.0.2
+  flutter_map_marker_cluster: ^1.4.0
   latlong2: ^0.9.1
   cached_network_image: ^3.4.1
   photo_view: ^0.15.0
@@ -43,25 +43,25 @@ dependencies:
   http: ^1.2.2
 
   # Cloud Storage
-  google_sign_in: ^7.2.0
-  googleapis: ^15.0.0
-  extension_google_sign_in_as_googleapis_auth: ^3.0.0
+  google_sign_in: ^6.3.0
+  googleapis: ^13.2.0
+  extension_google_sign_in_as_googleapis_auth: ^2.0.13
 
   # Platform Integration
-  flutter_blue_plus: ^2.1.0
+  flutter_blue_plus: ^1.36.8
   dive_computer: ^0.1.0-dev.2  # libdivecomputer FFI wrapper
-  permission_handler: ^12.0.1
+  permission_handler: ^11.4.0
   file_picker: ^10.3.8
   image_picker: ^1.1.2
-  share_plus: ^12.0.1
+  share_plus: ^10.1.4
   url_launcher: ^6.3.0
   flutter_contacts: ^1.1.9+2
-  geolocator: ^14.0.2
-  geocoding: ^4.0.0
+  geolocator: ^13.0.4
+  geocoding: ^3.0.0
 
   # Storage
   shared_preferences: ^2.3.2
-  flutter_secure_storage: ^10.0.0
+  flutter_secure_storage: ^9.2.4
 
   # FFI
   ffi: ^2.1.0
@@ -80,13 +80,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^6.0.0
+  flutter_lints: ^4.0.0
   flutter_launcher_icons: ^0.14.2
-  build_runner: ^2.4.12
-  drift_dev: ^2.20.1
-  freezed: ^3.2.3
-  json_serializable: ^6.8.0
-  riverpod_generator: ^4.0.0+1
+  build_runner: ^2.4.15
+  drift_dev: ^2.28.0
+  freezed: ^2.5.8
+  json_serializable: ^6.9.5
+  riverpod_generator: ^2.6.4
   mockito: ^5.4.6
 
 
