--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
 
   # Platform Integration
   flutter_blue_plus: ^2.1.0
-  flutter_blue_plus_winrt: ^0.0.10
+  flutter_blue_plus_winrt: 0.0.9
   dive_computer: ^0.1.0-dev.2  # libdivecomputer FFI wrapper
   permission_handler: ^12.0.1
   file_picker: ^10.3.8
