--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,9 @@ concurrency:
 
 env:
   FLUTTER_VERSION: '3.38.5'
+  # OSM tile server acknowledgment (proves we've read the usage policy)
+  # See: https://operations.osmfoundation.org/policies/tiles/
+  DART_DEFINES: '--dart-define=flutter.flutter_map.unblockOSM=Our tile servers are not.'
 
 jobs:
   analyze:
@@ -139,10 +142,10 @@ jobs:
 
       - name: Build iOS
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: flutter build ios --release --no-codesign -v
+        run: flutter build ios --release --no-codesign ${{ env.DART_DEFINES }} -v
 
       - name: Build macOS
-        run: flutter build macos --release -v
+        run: flutter build macos --release ${{ env.DART_DEFINES }} -v
 
       - name: Upload iOS artifact
         uses: actions/upload-artifact@v4
@@ -220,10 +223,10 @@ jobs:
         run: dart run build_runner build --delete-conflicting-outputs
 
       - name: Build Android APK
-        run: flutter build apk --release -v
+        run: flutter build apk --release ${{ env.DART_DEFINES }} -v
 
       - name: Build Linux
-        run: flutter build linux --release -v
+        run: flutter build linux --release ${{ env.DART_DEFINES }} -v
 
       - name: Upload Android artifact
         uses: actions/upload-artifact@v4
@@ -279,7 +282,7 @@ jobs:
         run: dart run build_runner build --delete-conflicting-outputs
 
       - name: Build Windows
-        run: flutter build windows --release -v
+        run: flutter build windows --release ${{ env.DART_DEFINES }} -v
 
       - name: Upload Windows artifact
         uses: actions/upload-artifact@v4
