--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -142,10 +142,10 @@ jobs:
 
       - name: Build iOS
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: flutter build ios --release --no-codesign ${{ env.DART_DEFINES }} -v
+        run: flutter build ios --release --no-codesign "${{ env.DART_DEFINES }}" -v
 
       - name: Build macOS
-        run: flutter build macos --release ${{ env.DART_DEFINES }} -v
+        run: flutter build macos --release "${{ env.DART_DEFINES }}" -v
 
       - name: Upload iOS artifact
         uses: actions/upload-artifact@v4
@@ -223,10 +223,10 @@ jobs:
         run: dart run build_runner build --delete-conflicting-outputs
 
       - name: Build Android APK
-        run: flutter build apk --release ${{ env.DART_DEFINES }} -v
+        run: flutter build apk --release "${{ env.DART_DEFINES }}" -v
 
       - name: Build Linux
-        run: flutter build linux --release ${{ env.DART_DEFINES }} -v
+        run: flutter build linux --release "${{ env.DART_DEFINES }}" -v
 
       - name: Upload Android artifact
         uses: actions/upload-artifact@v4
@@ -282,7 +282,7 @@ jobs:
         run: dart run build_runner build --delete-conflicting-outputs
 
       - name: Build Windows
-        run: flutter build windows --release ${{ env.DART_DEFINES }} -v
+        run: flutter build windows --release "${{ env.DART_DEFINES }}" -v
 
       - name: Upload Windows artifact
         uses: actions/upload-artifact@v4
