--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -146,24 +146,13 @@ jobs:
 
       - name: Build macOS (no-sandbox for distribution)
         run: |
-          # Build with no-sandbox entitlements for GitHub distribution
-          # This version can run on any Mac without sandbox/entitlement issues
+          # Build with Flutter first (compiles Dart code)
+          flutter build macos --release "${{ env.DART_DEFINES }}"
 
-          # Generate Flutter configs and compile Dart code
-          flutter build macos --config-only --release "${{ env.DART_DEFINES }}"
-
-          # Build with xcodebuild overrides for ad-hoc signing
-          cd macos
-          xcodebuild -workspace Runner.xcworkspace \
-            -scheme Runner \
-            -configuration Release \
-            -derivedDataPath ../build/macos \
-            CODE_SIGN_IDENTITY="-" \
-            CODE_SIGN_STYLE=Manual \
-            DEVELOPMENT_TEAM="" \
-            CODE_SIGN_ENTITLEMENTS=Runner/ReleaseNoSandbox.entitlements \
-            BUILD_DIR=../build/macos/Build/Products
-          cd ..
+          # Re-sign with ad-hoc signature and no-sandbox entitlements
+          codesign --force --deep --sign - \
+            --entitlements macos/Runner/ReleaseNoSandbox.entitlements \
+            build/macos/Build/Products/Release/submersion.app
 
       - name: Upload iOS artifact
         uses: actions/upload-artifact@v4
