--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -147,14 +147,13 @@ jobs:
       - name: Build macOS (no-sandbox for distribution)
         run: |
           # Configure ad-hoc signing for CI (no developer certificate available)
-          # These settings override Xcode's automatic signing
-          cat >> macos/Runner/Configs/Release.xcconfig << 'EOF'
-
-          // CI ad-hoc signing overrides
-          CODE_SIGN_IDENTITY = -
-          CODE_SIGN_STYLE = Manual
-          DEVELOPMENT_TEAM =
-          EOF
+          # Must modify project.pbxproj directly - xcconfig can't override target-level settings
+          sed -i '' \
+            -e 's/CODE_SIGN_IDENTITY = ".*"/CODE_SIGN_IDENTITY = "-"/g' \
+            -e 's/DEVELOPMENT_TEAM = .*;/DEVELOPMENT_TEAM = "";/g' \
+            -e 's/PROVISIONING_PROFILE_SPECIFIER = ".*"/PROVISIONING_PROFILE_SPECIFIER = ""/g' \
+            -e 's/"CODE_SIGN_IDENTITY\[sdk=macosx\*\]" = ".*"/"CODE_SIGN_IDENTITY[sdk=macosx*]" = "-"/g' \
+            macos/Runner.xcodeproj/project.pbxproj
 
           # Build with Flutter
           flutter build macos --release "${{ env.DART_DEFINES }}"
