--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -35,6 +35,10 @@ fastlane/Preview.html
 fastlane/screenshots/
 fastlane/test_output/
 
+# Ruby bundle (installed locally)
+vendor/bundle/
+.bundle/
+
 # Exceptions to above rules.
 !default.mode1v3
 !default.mode2v3
