Remove 3rd party API features

--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -60,6 +60,8 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>FLTEnableMergedPlatformUIThread</key>
+	<false/>
 	<key>UTImportedTypeDeclarations</key>
 	<array>
 		<dict>
