--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -130,6 +130,9 @@ jobs:
       - name: Run code generation
         run: dart run build_runner build --delete-conflicting-outputs
 
+      - name: Update CocoaPods repo
+        run: pod repo update
+
       - name: Build iOS
         run: flutter build ios --release --no-codesign "${{ env.DART_DEFINES }}" -v
 
