target newer iOS

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,6 @@
 # Minimum iOS version for the app
-platform :ios, '13.0'
+# iOS 14.0 required for CNAuthorizationStatusLimited (contacts permission)
+platform :ios, '14.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
