--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -64,6 +64,8 @@
 	<false/>
 	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string>Submersion uses Bluetooth to connect to dive computers and import dive data.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Submersion accesses your photo library to attach images to dive logs.</string>
 	<key>UTImportedTypeDeclarations</key>
 	<array>
 		<dict>
