fix(ci): commit pubspec.lock for reproducible builds
pubspec.lock was in .gitignore, causing CI to resolve dependencies
freshly on each run. This led to version mismatches when new package
versions were published (file_picker 10.3.9 released 13 hours ago).

For Flutter apps (not packages), pubspec.lock should be committed
to ensure reproducible builds across all environments.

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 .pub-cache/
 .pub/
 build/
-pubspec.lock
+# pubspec.lock should be committed for apps (not packages) to ensure reproducible builds
 *.g.dart
 *.freezed.dart
 
