feat: configure iOS for background notifications

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -109,6 +109,8 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>bluetooth-central</string>
+		<string>fetch</string>
+		<string>processing</string>
 	</array>
 	<key>UTImportedTypeDeclarations</key>
 	<array>
