--- a/macos/Podfile
+++ b/macos/Podfile
@@ -39,17 +39,10 @@ post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_macos_build_settings(target)
 
-    # Remove .xcprivacy files from resources to avoid "no rule to process" warnings
-    if target.respond_to?(:resources_build_phase) && target.resources_build_phase
-      target.resources_build_phase.files.each do |file|
-        if file.display_name.end_with?('.xcprivacy')
-          target.resources_build_phase.remove_file_reference(file)
-        end
-      end
-    end
-
     target.build_configurations.each do |config|
       config.build_settings['MACOSX_DEPLOYMENT_TARGET'] = '11.0'
+      # Exclude .xcprivacy files from source processing to avoid "no rule to process" warnings
+      config.build_settings['EXCLUDED_SOURCE_FILE_NAMES'] = '$(inherited) *.xcprivacy'
       # Suppress warnings from sqlite3 C source code (third-party dependency)
       if target.name == 'sqlite3'
         config.build_settings['GCC_WARN_INHIBIT_ALL_WARNINGS'] = 'YES'
