feat(wearables): add health package for HealthKit integration
Add health ^13.3.0 for cross-platform health data access (HealthKit on iOS/macOS,
Health Connect on Android). Updated from originally planned ^10.2.0 to resolve
intl package version conflict.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   geocoding: ^4.0.0
   photo_manager: ^3.6.0
   native_exif: ^0.6.0
+  health: ^13.3.0  # Cross-platform health data (HealthKit, Health Connect)
 
   # Storage
   shared_preferences: ^2.3.2
